--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "express": "^4.21.2",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -15,10 +16,12 @@
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^15.2.4",
     "@nx/devkit": "21.3.7",
+    "@nx/esbuild": "21.3.7",
     "@nx/eslint": "21.3.7",
     "@nx/eslint-plugin": "21.3.7",
     "@nx/js": "21.3.7",
     "@nx/next": "21.3.7",
+    "@nx/node": "^21.3.7",
     "@nx/playwright": "21.3.7",
     "@nx/workspace": "21.3.7",
     "@playwright/test": "^1.36.0",
@@ -26,9 +29,12 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^4.17.21",
+    "@types/node": "~18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "autoprefixer": "10.4.13",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
