chore: update dependencies in package.json
- Added new dependencies: @ant-design/cssinjs, @next/env, antd, body-parser, cors, dotenv, jsonwebtoken, lucide-react, mongoose, nodemailer, rc-util, react-slick, slick-carousel, validator, yup.
- Updated devDependencies: @types/cors, @types/react-slick, @types/validator, express-api-to-postman.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,6 +2,9 @@
   "name": "@landlordatitenanti/backend",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "postman": "express-to-postman -i src/main.ts -o ./collections/api.json"
+  },
   "nx": {
     "targets": {
       "build": {
