--- a/package.json
+++ b/package.json
@@ -5,10 +5,25 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
+    "@next/env": "^15.4.4",
+    "antd": "^5.26.6",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.526.0",
+    "mongoose": "^8.16.5",
     "next": "~15.2.4",
+    "nodemailer": "^7.0.5",
+    "rc-util": "^5.44.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "validator": "^13.15.15",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -29,10 +44,13 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "~18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@types/react-slick": "^0.23.13",
+    "@types/validator": "^13.15.2",
     "autoprefixer": "10.4.13",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
@@ -43,6 +61,7 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "express-api-to-postman": "^1.1.0",
     "nx": "21.3.7",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
